# arpage

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac
po/.svn/: all-wcprops  entries
src/: Makefile.am.bak  Makefile.in  arpage.ui  arpageps.ui  arppatt.cc~  arppatt.h~  arprun.h~  arpstorage.cc  arpstorage.h  arpui.cc~  arpui.h  arpui.h~  ccrange.h  cs102_filter.cc  cs102_filter.cc~  event_zone.cc  jack_process.cc~  jack_process.h  main.cc~  midimsg.cc  midimsg.cc~  midimsg.h  midimsg.h~  pattelem.h  runner2ui.h  runner2ui.h~  scales.h
src/.svn/: all-wcprops  entries
src/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  arpage.h.svn-base  arppatt.cc.svn-base  arppatt.h.svn-base  arprun.cc.svn-base  arprun.h.svn-base  arpui.cc.svn-base  jack_process.cc.svn-base  ledblue_on.png.svn-base  main.cc.svn-base  midimsg.cc.svn-base  midimsg.h.svn-base  scales.cc.svn-base  scales.h.svn-base  zonage.ui.svn-base
